2017-06-30  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_func.c (free_func): Remove unneeded call to func_is_internal().

2017-06-29  Christian Fischer  <christian.fischer@greenbone.net>

	* nasl/nasl_crypto.c (nasl_get_sign, nasl_get_smb2_sign,
	nasl_keyexchg): Use the function names in nasl_perror
	which are exposed to the NASL scripts.

2017-06-29  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_global_ctxt.h (naslctxt): Remove maxlen and buffer elements.

	* nasl/nasl_grammar.y (parse_buffer, parse_len): New variables.
	(init_nasl_ctx, nasl_clean_ctx, mylex): Adjust to use parse_buffer and
	parse_len instead of allocating and reallocating a new ctxt buffer each
	time. Improves parsing performance.

2017-06-29  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/nasl_plugins.c (nasl_plugin_add): Set the preference's name to
	Timeout instead of Script timeout.

2017-06-28  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Remove repetitive filename duplications during parsing. Improves fresh
	load-up time.

	* nasl/nasl_debug.c (nasl_set_filename): New function.
	(nasl_perror): Use value set by new function instead of filename element
	in lex_ctxt.

	* nasl/nasl_debug.h: Add new function prototype.

	* nasl/nasl_global_ctxt.h (lex_ctxt): Remove filename element.

	* nasl/exec.c (nasl_exec, exec_nasl_script): Call nasl_set_filename().

	* nasl/lint.c (nasl_lint_call), nasl/nasl_tree.c (free_tree): Remove
	filename handling.

	* nasl/nasl_tree.h (tree_cell): Remove filename element.

	* nasl/nasl_grammar.y (FNAME): Remove macro.
	(nasllex): Don't duplicate context filename.
	(init_nasl_ctxt): Call nasl_set_filename().
	(nasl_clean_ctxt): Don't free filename.

2017-06-28  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_tree.c (allloc_tree_cell): Remove unneeded initializations.
	Remove function parameters.

	* nasl/nasl_tree.h: Adjust function prototype.

	* nasl/exec.c, nasl/nasl_cert.c, nasl/nasl_crypto.c,