@@ -1,5 +1,15 @@
 2017-06-30  Hani Benhabiles  <hani.benhabiles@greenbone.net>
 
+	* nasl/nasl_grammar.y (nasl_clean_inc): New function.
+	(INCLUDE): Save parsed tree cells of included files for later re-usage.
+	Significantly improves load-up performance.
+
+	* nasl/nasl.h: Add function prototype.
+
+	* src/pluginload.c (plugins_reload_from_dir): Call nasl_clean_inc().
+
+2017-06-30  Hani Benhabiles  <hani.benhabiles@greenbone.net>
+
 	* nasl/nasl_func.c (free_func): Remove unneeded call to func_is_internal().
 
 2017-06-29  Christian Fischer  <christian.fischer@greenbone.net>
